Bug #4571 Several compile errors/warnings when compiling 5.0.1-pre on Windows
Submitted: 15 Jul 2004 22:46 Modified: 20 Jul 2004 3:29
Reporter: Lenz Grimmer Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server: Compiling Severity:S1 (Critical)
Version:5.0.1-pre OS:Windows (Windows NT)
Assigned to: MySQL Verification Team CPU Architecture:Any

[15 Jul 2004 22:46] Lenz Grimmer
Description:
Compiling the current 5.0 tree (pre 5.0.1) on Windows with VC++ 6.0 gives the following errors/warnings
(trimmed for better readability):

There were 14 compile warnings:
------------------------------------------------------------------------------
1: C:\cygwin\home\mysqldev\build\mysql-5.0.1-alpha-build\mysql-5.0.1-alpha\myisa
m\sort.c(855) : warning C4090: 'initializing' : different 'volatile' qualifiers

2: C:\cygwin\home\mysqldev\build\mysql-5.0.1-alpha-build\mysql-5.0.1-alpha\sql\i
tem_timefunc.cpp(990) : warning C4244: '=' : conversion from '__int64' to 'unsig
ned long', possible loss of data

3: C:\cygwin\home\mysqldev\build\mysql-5.0.1-alpha-build\mysql-5.0.1-alpha\sql\i
tem_timefunc.cpp(996) : warning C4244: '=' : conversion from '__int64' to 'unsig
ned long', possible loss of data

4: C:\cygwin\home\mysqldev\build\mysql-5.0.1-alpha-build\mysql-5.0.1-alpha\sql\o
pt_range.cpp(1885) : warning C4101: 'sweep_cost' : unreferenced local variable

5: C:\cygwin\home\mysqldev\build\mysql-5.0.1-alpha-build\mysql-5.0.1-alpha\sql\s
p.cpp(1097) : warning C4101: 'db_access' : unreferenced local variable

6: C:\cygwin\home\mysqldev\build\mysql-5.0.1-alpha-build\mysql-5.0.1-alpha\sql\s
p_head.cpp(698) : warning C4101: 'sl' : unreferenced local variable

7: C:\cygwin\home\mysqldev\build\mysql-5.0.1-alpha-build\mysql-5.0.1-alpha\sql\s
ql_insert.cpp(1591) : warning C4244: 'argument' : conversion from '__int64' to '
unsigned long', possible loss of data

8: C:\cygwin\home\mysqldev\build\mysql-5.0.1-alpha-build\mysql-5.0.1-alpha\sql\s
ql_insert.cpp(400) : warning C4244: 'argument' : conversion from '__int64' to 'u
nsigned long', possible loss of data

9: C:\cygwin\home\mysqldev\build\mysql-5.0.1-alpha-build\mysql-5.0.1-alpha\sql\s
ql_insert.cpp(413) : warning C4244: 'argument' : conversion from '__int64' to 'u
nsigned long', possible loss of data

10: C:\cygwin\home\mysqldev\build\mysql-5.0.1-alpha-build\mysql-5.0.1-alpha\sql\
sql_parse.cpp(3211) : warning C4101: 'sph' : unreferenced local variable

11: C:\cygwin\home\mysqldev\build\mysql-5.0.1-alpha-build\mysql-5.0.1-alpha\sql\
sql_parse.cpp(3628) : warning C4244: 'argument' : conversion from '__int64' to '
unsigned long', possible loss of data

12: C:\cygwin\home\mysqldev\build\mysql-5.0.1-alpha-build\mysql-5.0.1-alpha\sql\
sql_select.cpp(1752) : warning C4101: 'dep_tables' : unreferenced local variable

13: C:\cygwin\home\mysqldev\build\mysql-5.0.1-alpha-build\mysql-5.0.1-alpha\sql\
sql_update.cpp(1158) : warning C4244: 'argument' : conversion from '__int64' to
'unsigned long', possible loss of data

14: C:\cygwin\home\mysqldev\build\mysql-5.0.1-alpha-build\mysql-5.0.1-alpha\sql\
sql_update.cpp(386) : warning C4244: 'argument' : conversion from '__int64' to '
unsigned long', possible loss of data

------------------------------------------------------------------------------

Errors:

------------------------------------------------------------------------------
ERROR # 1: C:\cygwin\home\mysqldev\build\mysql-5.0.1-alpha-build\mysql-5.0.1-alp
ha\sql-common\client.c(1514) : error C2373: 'cli_mysql_real_connect' : redefinit
ion; different type modifiers

ERROR # 2: C:\cygwin\home\mysqldev\build\mysql-5.0.1-alpha-build\mysql-5.0.1-alp
ha\sql\opt_range.cpp(2452) : error C2440: 'initializing' : cannot convert from '
unsigned char [1790]' to 'char *'

ERROR # 3: C:\cygwin\home\mysqldev\build\mysql-5.0.1-alpha-build\mysql-5.0.1-alp
ha\sql\opt_range.cpp(2484) : error C2230: '-' : indirection to different types

ERROR # 4: C:\cygwin\home\mysqldev\build\mysql-5.0.1-alpha-build\mysql-5.0.1-alp
ha\sql\sp_head.cpp(869) : error C2664: 'strlen' : cannot convert parameter 1 fro
m 'unsigned char *' to 'const char *'

ERROR # 5: C:\cygwin\home\mysqldev\build\mysql-5.0.1-alpha-build\mysql-5.0.1-alp
ha\sql\sp_head.cpp(886) : error C2664: 'int __thiscall Protocol::store(const cha
r *,unsigned int,struct charset_info_st *)' : cannot convert parameter 1 from 'u
nsigned char *' to 'const char *'

ERROR # 6: C:\cygwin\home\mysqldev\build\mysql-5.0.1-alpha-build\mysql-5.0.1-alp
ha\sql\sp_head.cpp(934) : error C2664: 'strlen' : cannot convert parameter 1 fro
m 'unsigned char *' to 'const char *'

ERROR # 7: C:\cygwin\home\mysqldev\build\mysql-5.0.1-alpha-build\mysql-5.0.1-alp
ha\sql\sp_head.cpp(950) : error C2664: 'int __thiscall Protocol::store(const cha
r *,unsigned int,struct charset_info_st *)' : cannot convert parameter 1 from 'u
nsigned char *' to 'const char *'

ERROR # 8: C:\cygwin\home\mysqldev\build\mysql-5.0.1-alpha-build\mysql-5.0.1-alp
ha\sql\sql_db.cpp(228) : error C2664: 'hash_search' : cannot convert parameter 2
 from 'const char *' to 'const unsigned char *'

------------------------------------------------------------------------------

How to repeat:
Compile current 5.0 tree on Windows
[16 Jul 2004 5:56] MySQL Verification Team
LenZ,

I am not changing the status for patch pending because when I was
ready for to apply them to my local BK 5.0 source tree comes new
changesets (Sanja and Guilhem). I am compiling again and will commit
them today (Friday).