Fixes for bug #4571 (Windows compabilities)